12장 및 jdk19, gralde8.5 설정